# PixelFormat

./: .gitignore  CMakeLists.txt  fflpay.txt
Include/: bitmap.h  common.h  crc.h  endian.h  image.h  load.h  ms_type.h  png.h  pngcmn.h  pngdecoder.h
Source/: bitmap.c  crc.c  endian.c  image.c  load.c  main.c  png.c  pngcmn.c  pngdecoder.c
